src/test/ui/rfc-1445-restrict-constants-in-patterns/feature-gate.with_gate.stderr
error: fatal error triggered by #[dustc_error]
  --> $DIR/feature-gate.rs:21:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

